Updates from Overleaf

--- a/NuId-Ch2/NeutrinoID.tex
+++ b/NuId-Ch2/NeutrinoID.tex
@@ -1,6 +1,6 @@
 \label{sec:sliceID}
-\subsection{Event Slicing and Cosmic Removal in Pandora}
-\subsection{SliceID : Cosmic Removal through topology and scintillation-light}
+\subsection{Event Slicing and Cosmic Removal in Pandora \textcolor{red}{Wouter}}
+\subsection{SliceID : Cosmic Removal through topology and scintillation-light \textcolor{red}{Wouter}}
 \par After the Pandora pattern-recognition algorithm suite has isolated individual interactions into reconstructed \emph{slices} and removed those that are either through-going or out-of-time, the remaining task is to identify which (if any) slice is associated to a neutrino interaction. This is done by relying on scintillation light information to reject slices incompatible with light recorded in-time with the beam, and through topological cuts aimed at rejecting stopping-muon events which enter the TPC. The SliceID is at the core of all neutrino selections performed in this analysis, and serves as the first, common step in the analysis, responsible for the majority of cosmic-rejection.
 \subsection{CRT Veto and Distance Tagger \textcolor{green}{Elena}}
 Contrary to  $\nu_\mu$ interactions and cosmic rays, the charged particles associated to $\nu_e$ interactions are unlikely to deposit energy in the Cosmic Ray Tagger (CRT). Building upon this discriminating factor, the CRT Veto and CRT Distance Tagger are preselection tools which leverage the additional CRT information available for Run 3+ data.
@@ -17,8 +17,6 @@ The rejection power and efficiency of the CRT veto are calculated using the BNB 
 \emph{CRT Distance Tagger.} 
 The CRT Distance Tagger tool builds upon the standard pandora neutrino vertex reconstruction and the CRT tagging of TPC tracks. A TPC track is tagged with a CRT hit association if the track projection onto a CRT panel and a CRT hit are close in space. 
 To perform this association, the track projection to the CRT is calculated under the hypothesis that the associated particle crossed the TPC at the time registered by the CRT hit under consideration; more details on the CRT hit to TPC track match are available in \cite{bib:CRTPresel_Technote}.  The CRT Distance Tagger checks the minimum distance between the reconstructed neutrino vertex and each track tagged with a CRT hit. If the minimum distance is less than 14 cm, the event is rejected. An example event tagged by this cut is shown in Figure~\ref{fig:crtdist00}.  For the CRT Distance Tagger, the BNB external passing rate is $\sim$81\%,  and the $\nu_e$ efficiency greater than $\sim$96\% for all electron neutrino energies, raising at low energies. \\
-
-
  
 \begin{figure}[h!]
 \centering
@@ -27,6 +25,21 @@ To perform this association, the track projection to the CRT is calculated under
 \label{fig:crtdist00}
 \end{figure}
 
-
+An overview of the impact of the CRT on cosmic rejection can be seen in Figure~\ref{fig:crt} where the beam-time distribution for the $8E18$ POT Run 3 open dataset is shown after SliceID (left), and after SliceID and CRT cosmic-tagging tools (both CRT veto and distance tagger) have been applied (right), with EXT backgrounds dropping by more than a factor of 3.
 Further details and a preliminary study of the CRT  impact on an electron neutrino preselection can be found in \cite{bib:CRTPresel_Technote}. 
 
+\begin{figure}[ht] 
+\begin{center}
+    \begin{subfigure}[b]{0.45\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{NuId-Ch2/Images/flash_time_01152020.pdf}
+    \caption{\label{fig:crt:pre} no CRT tools.}
+    \end{subfigure}
+    \begin{subfigure}[b]{0.45\textwidth}
+    \centering
+    \includegraphics[width=1.00\textwidth]{NuId-Ch2/Images/flash_time_01152020_CRT.pdf}
+    \caption{\label{fig:crt:post} with CRT tools.}
+    \end{subfigure}
+\caption{\label{fig:crt} Beam timing distribution before (left) and after (right) CRT tools have been applied. The EXT contribution is reduced by over a factor of three.}
+\end{center}
+\end{figure}
