--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@
 
 \maketitle
 
-\abstract{We present an analysis which measures $\nu_e$ interactions from the Booster Neutrino Beamline with the MicroBooNE Experiment with the goal of addressing the nature of anomalous low-energy events with EM activity in the final state recorded by the MiniBooNE experiment. In this document we report the reconstruction and event selections performed, the evaluation of systematics associated to detector, flux, and neutrino-interaction modeling, and the expected sensitivity to the MB-$\nu_e$ LEE model utilizing the available BNB dataset of 10.1$\times 10^{20}$ POT. }
+\abstract{The analysis presented in this note uses data from the MicroBooNE Experiment to measure  $\nu_e$ interactions from the Booster Neutrino Beamline using the Pandora reconstruction framework. Our goal is addressing the nature of the anomalous excess of low-energy events with EM activity in the final state as recorded by the MiniBooNE experiment. In this document, we outline the analysis strategy, focusing on the reconstruction and event selections performed, the evaluation of systematics associated to detector, flux, and neutrino-interaction modeling, and the expected sensitivity to the MB-$\nu_e$ LEE model utilizing the available BNB dataset of 10.1$\times 10^{20}$ POT. }
 
 \tableofcontents
 
@@ -768,12 +768,6 @@ The details on detector systematics can be found in~\cite{bib:detsyssupportnote}
 
 \subsection{Flux Uncertainties}
 The flux and uncertainties for MCC9~\cite{bib:fluxmcc9} are largely the same as MCC8~\cite{bib:fluxtechnote}. We use multisim technique to estimate the flux and neutrino interaction uncertainties. In this procedure, many Monte Carlo distributions are generated and the parameters (see  Table~\ref{tab:fluxsyst}) in the model are varied simultaneously resulting in different MC reweighting in each universe. Reweighting all the parameters at the same time allows for correct correlation between them. This correlation then can be used to generate a covariance matrix as follows:
-
-
-
-\begin{equation}
-    
-\end{equation}
 
 \begin{table}[H]
 \centering
