Updates from Overleaf

--- a/NuMuCCsel/NuMuCCsel.tex
+++ b/NuMuCCsel/NuMuCCsel.tex
@@ -34,7 +34,7 @@
 \label{sssec:NuMUCCsel:sel:evt}
 \par In addition to the SliceID preselection, three additional cuts are performed at the slice-level:\\
 \emph{reco\_nu\_vtx\_sce\_\{x,y,z\}}: Requiring that the reconstructed vertex is inside of the fiducial volume eliminates backgrounds from cosmic rays and dirt events which originate outside of the detector. These values have been corrected for spacecharge which allows for the tightening of the fiducial volume near the boundaries of the detector and a higher selection efficiency \textcolor{red}{find plot to show this}. Before spacecharge correction, a more conservative fiducial volume was used due to spacecharge being more drastic near the boundaries.\\
-\emph{topological_score}:
+\emph{topological\_score}:
 
 \begin{figure}
     \centering
