Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -649,7 +649,7 @@ First, we aim at rejecting cosmic-induced events by requiring large CosmicIP and
 
 Next, the goal is to suppress events from $\nu_\mu$ charged current interactions. We require shower hits to be the dominant in the slice, and imposing tight quality requirements on the shower object (shr\_score, shrmoliereavg, trkfit, subcluster).
 
-At this stage, most of selected events contain neutrino-induced electromagnetic activity so that main background are events with $\pi^0$. They are rejected requiring only one shower in the event, a short distance between the track and shower start points, and that the shower dEdx can be evaluated at least on the collection plane and it is not consistent with two or more MIPs in any plane. Two different dEdx definitions are used, one in the first 2 cm of the shower (motivated by Fig.~).
+At this stage, most of selected events contain neutrino-induced electromagnetic activity so that main background are events with $\pi^0$. They are rejected requiring only one shower in the event, a short distance between the track and shower start points, and that the shower dEdx can be evaluated at least on the collection plane and it is not consistent with two or more MIPs in any plane. Two different dEdx definitions are used, one in the first 2 cm of the shower (motivated by Fig.~\ref{fig:dedxgammas:dist}) and one.
 
 Finally, in order to avoid misreconstructed events, events where the track and shower are aligned are rejected.
 
